--- a/demos/SecretSantaExplained.ipynb
+++ b/demos/SecretSantaExplained.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,19 +62,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2018-10-09 14:06:34,659 Start MPyC runtime v0.4.1\n"
+      "2018-10-23 09:41:39,962 Start MPyC runtime v0.4.2\n"
      ]
     }
    ],
    "source": [
-    "mpc.start()   # required only when run with multiple parties "
+    "mpc.run(mpc.start())  # required only when run with multiple parties "
    ]
   },
   {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -300,12 +300,12 @@
      "text": [
       "Random unit vectors:\n",
       " 1 [1]\n",
-      " 2 [0, 1]\n",
-      " 3 [1, 0, 0]\n",
-      " 4 [0, 1, 0, 0]\n",
-      " 5 [0, 0, 1, 0, 0]\n",
-      " 6 [0, 1, 0, 0, 0, 0]\n",
-      " 7 [0, 0, 0, 0, 0, 1, 0]\n"
+      " 2 [1, 0]\n",
+      " 3 [0, 1, 0]\n",
+      " 4 [0, 0, 1, 0]\n",
+      " 5 [0, 0, 0, 0, 1]\n",
+      " 6 [0, 0, 1, 0, 0, 0]\n",
+      " 7 [0, 0, 1, 0, 0, 0, 0]\n"
      ]
     }
    ],
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -328,11 +328,11 @@
       "Random permutations:\n",
       " 1 [0]\n",
       " 2 [0, 1]\n",
-      " 3 [1, 0, 2]\n",
-      " 4 [3, 1, 0, 2]\n",
-      " 5 [4, 1, 0, 3, 2]\n",
-      " 6 [4, 0, 1, 2, 5, 3]\n",
-      " 7 [5, 0, 6, 3, 4, 1, 2]\n"
+      " 3 [2, 0, 1]\n",
+      " 4 [1, 0, 2, 3]\n",
+      " 5 [2, 3, 4, 0, 1]\n",
+      " 6 [4, 0, 2, 1, 3, 5]\n",
+      " 7 [5, 2, 3, 6, 0, 1, 4]\n"
      ]
     }
    ],
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -355,10 +355,10 @@
       "Random derangements:\n",
       " 2 [1, 0]\n",
       " 3 [2, 0, 1]\n",
-      " 4 [1, 2, 3, 0]\n",
-      " 5 [2, 0, 1, 4, 3]\n",
-      " 6 [5, 3, 4, 2, 1, 0]\n",
-      " 7 [5, 2, 6, 1, 0, 4, 3]\n"
+      " 4 [3, 2, 0, 1]\n",
+      " 5 [4, 3, 1, 2, 0]\n",
+      " 6 [1, 3, 4, 5, 0, 2]\n",
+      " 7 [2, 6, 5, 4, 0, 3, 1]\n"
      ]
     }
    ],
@@ -371,19 +371,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2018-10-09 14:06:34,915 Stop MPyC runtime -- elapsed time: 0:00:00.255697\n"
+      "2018-10-23 09:41:40,805 Stop MPyC runtime -- elapsed time: 0:00:00.831105\n"
      ]
     }
    ],
    "source": [
-    "mpc.shutdown()   # required only when run with multiple parties  "
+    "mpc.run(mpc.shutdown())   # required only when run with multiple parties  "
    ]
   },
   {
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -409,8 +409,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "C:\\Users\\bschoe\\Documents\\GitHub\\mympyc\\demos>python run.py 1 SecretSantaExplained.py \n",
-      "2018-10-09 14:06:35,215 Start MPyC runtime v0.4.1\n",
+      "C:\\Users\\Berry\\Documents\\GitHub\\mympyc\\demos>python run.py 1 SecretSantaExplained.py \n",
+      "2018-10-23 09:41:41,327 Start MPyC runtime v0.4.2\n",
       "Example: (5+13)*(5-13) = -144\n",
       "Random unit vectors:\n",
       " 1 [1]\n",
@@ -435,7 +435,7 @@
       " 5 [1, 0, 3, 4, 2]\n",
       " 6 [1, 5, 3, 2, 0, 4]\n",
       " 7 [6, 5, 3, 2, 0, 4, 1]\n",
-      "2018-10-09 14:06:35,387 Stop MPyC runtime -- elapsed time: 0:00:00.171880\n"
+      "2018-10-23 09:41:41,702 Stop MPyC runtime -- elapsed time: 0:00:00.374999\n"
      ]
     },
     {
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -472,9 +472,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "C:\\Users\\bschoe\\Documents\\GitHub\\mympyc\\demos>python run.py 3 SecretSantaExplained.py \n",
-      "2018-10-09 14:06:35,825 Start MPyC runtime v0.4.1\n",
-      "2018-10-09 14:06:36,356 Connected to all parties.\n",
+      "C:\\Users\\Berry\\Documents\\GitHub\\mympyc\\demos>python run.py 3 SecretSantaExplained.py \n",
+      "2018-10-23 09:41:42,364 Start MPyC runtime v0.4.2\n",
+      "2018-10-23 09:41:42,895 Connected to all parties.\n",
       "Example: (5+13)*(5-13) = -144\n",
       "Random unit vectors:\n",
       " 1 [1]\n",
@@ -499,7 +499,7 @@
       " 5 [2, 3, 0, 4, 1]\n",
       " 6 [2, 4, 3, 5, 0, 1]\n",
       " 7 [3, 0, 5, 1, 2, 6, 4]\n",
-      "2018-10-09 14:06:36,684 Stop MPyC runtime -- elapsed time: 0:00:00.859395\n"
+      "2018-10-23 09:41:43,333 Stop MPyC runtime -- elapsed time: 0:00:00.968745\n"
      ]
     },
     {
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -536,9 +536,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "C:\\Users\\bschoe\\Documents\\GitHub\\mympyc\\demos>python run.py 5 SecretSantaExplained.py \n",
-      "2018-10-09 14:08:15,915 Start MPyC runtime v0.4.1\n",
-      "2018-10-09 14:08:16,431 Connected to all parties.\n",
+      "C:\\Users\\Berry\\Documents\\GitHub\\mympyc\\demos>python run.py 5 SecretSantaExplained.py \n",
+      "2018-10-23 09:41:44,443 Start MPyC runtime v0.4.2\n",
+      "2018-10-23 09:41:44,974 Connected to all parties.\n",
       "Example: (5+13)*(5-13) = -144\n",
       "Random unit vectors:\n",
       " 1 [1]\n",
@@ -563,7 +563,7 @@
       " 5 [1, 4, 3, 0, 2]\n",
       " 6 [3, 0, 5, 1, 2, 4]\n",
       " 7 [1, 3, 4, 6, 0, 2, 5]\n",
-      "2018-10-09 14:08:16,868 Stop MPyC runtime -- elapsed time: 0:00:00.953153\n"
+      "2018-10-23 09:41:46,099 Stop MPyC runtime -- elapsed time: 0:00:01.656250\n"
      ]
     },
     {
@@ -607,7 +607,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
