--- a/demos/SecureSortingNetsExplained.ipynb
+++ b/demos/SecureSortingNetsExplained.ipynb
@@ -36,14 +36,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2018-09-27 10:05:29,486 Start MPyC runtime v0.3.5\n"
+      "2018-10-23 09:40:25,563 Start MPyC runtime v0.4.2\n"
      ]
     }
    ],
    "source": [
     "from mpyc.runtime import mpc    # load MPyC\n",
     "secint = mpc.SecInt()           # 32-bit secure MPyC integers\n",
-    "mpc.start()                     # required only when run with multiple parties\n",
+    "mpc.run(mpc.start())            # required only when run with multiple parties\n",
     "import traceback                # to show some suppressed error messages"
    ]
   },
@@ -144,7 +144,7 @@
       "    for i in oddeven_merge_sort(len(x)): compare_and_swap(x, *i)\n",
       "  File \"<ipython-input-2-a99b48746a99>\", line 30, in compare_and_swap\n",
       "    if x[a] > x[b]:\n",
-      "  File \"c:\\users\\berry\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\mpyc-0.3.5-py3.6.egg\\mpyc\\sectypes.py\", line 33, in __bool__\n",
+      "  File \"c:\\users\\berry\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\mpyc-0.4.2-py3.6.egg\\mpyc\\sectypes.py\", line 36, in __bool__\n",
       "    raise TypeError('cannot use secure type in Boolean expressions')\n",
       "TypeError: cannot use secure type in Boolean expressions\n"
      ]
@@ -302,7 +302,7 @@
       "    bitonic_compare(up, x)\n",
       "  File \"<ipython-input-7-8a5c3e13ac49>\", line 22, in bitonic_compare\n",
       "    if (x[i] > x[i + dist]) == up:\n",
-      "  File \"c:\\users\\berry\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\mpyc-0.3.5-py3.6.egg\\mpyc\\sectypes.py\", line 33, in __bool__\n",
+      "  File \"c:\\users\\berry\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\mpyc-0.4.2-py3.6.egg\\mpyc\\sectypes.py\", line 36, in __bool__\n",
       "    raise TypeError('cannot use secure type in Boolean expressions')\n",
       "TypeError: cannot use secure type in Boolean expressions\n"
      ]
@@ -371,12 +371,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2018-09-27 10:05:30,790 Stop MPyC runtime -- elapsed time: 0:00:01.287664\n"
+      "2018-10-23 09:40:26,468 Stop MPyC runtime -- elapsed time: 0:00:00.900694\n"
      ]
     }
    ],
    "source": [
-    "mpc.shutdown()   # required only when run with multiple parties"
+    "mpc.run(mpc.shutdown())   # required only when run with multiple parties"
    ]
   },
   {
@@ -403,7 +403,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
